2016-09-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * minor corrections to README.md
2016-06-14 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.5
  * added more unit tests for better code coverage
2016-06-11 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * fix .gitignore to work well for 'puppet module build'
  * release 0.1.4
  * added coveralls support
  * made the module compatible with puppet 4.x
  * remove Modulefile in favour of metadata.json
  * update .travis.yml -- add more test variants
  * cleanup Rakefile and revise Gemfile to abandon rspec-system
  * update specs to work with recent rspec without warnings
  * remove trailing whitespaces in sources
2013-08-23 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.3
2013-07-14 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * corrections to README.md and to tests
2013-07-12 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.2
  * finished README.md
  * added new methods for collective repository search
2013-07-12 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.1
  * fixed bug caused by usage of Regexp.match() { .. block .. }, blocks are not
    supported (ignored) by Regexp.match() in ruby<=1.8
  * added Puppet::Error to the list of allowed exceptions in repoutil_spec.rb
  * initial commit