@@ -1,18 +1,19 @@
 ---
 sudo: false
 language: ruby
+before_install:
+  - gem --version
 rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
   - 2.1
   - 2.2
-  - ruby-head
+    #  - ruby-head
 
-bundler_args: --without acceptance_tests
+bundler_args: --without acceptance
 
 script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
-
 env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
@@ -32,7 +33,7 @@ env:
     - PUPPET_GEM_VERSION="~> 4.4.0"
 matrix:
   allow_failures:
-    - rvm: ruby-head
+    # - rvm: ruby-head
   exclude:
     - rvm: 1.8.7
       env: PUPPET_GEM_VERSION="~> 4.0.0"
@@ -81,26 +82,6 @@ matrix:
     - rvm: 2.2
       env: PUPPET_GEM_VERSION="~> 3.7.0"
     - rvm: 2.2
-      env: PUPPET_GEM_VERSION="~> 3.8.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.0.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.2.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.3.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.4.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.5.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.6.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 3.7.0"
-    - rvm: ruby-head
       env: PUPPET_GEM_VERSION="~> 3.8.0"
 notifications:
   email: false
