@@ -1,3 +1,5 @@
+2016-11-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * adjust Gemfile for unit tests to run on older rubies
 2016-09-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * minor corrections to README.md
 2016-06-14 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
